--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,10 @@
     border-right-width: 0;
     border-left-width: 0;
   }
+
+.cadaescolha{
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 2.5rem 1rem 1rem;
+}
