--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,11 @@
     align-items: center;
     margin: 2.5rem 1rem 1rem;
 }
+
+.borda{
+    display:fixed;
+    border-style:solid;
+    border-width:1px;
+    padding: 2rem 5rem;
+    margin: 0.5rem 1rem 1rem;
+}
