--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,19 @@
-.titulo{
+header {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 4rem;
+    border-bottom: .1rem solid black;
+    padding:0.5rem;
+}
+
+
+h1{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    font-size: x-large;
     padding: .5rem;
     margin: 2.5rem 2rem 1rem;
 }
@@ -44,4 +56,61 @@
     border-width:1px;
     padding: 2rem 5rem;
     margin: 0.5rem 1rem 1rem;
+}
+
+
+.block {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    padding:2rem;
+}
+
+
+
+.border{
+    width: 12rem;
+    justify-content:space-evenly;
+    justify-content:space-between;
+    border: .1rem solid black;
+    margin:1rem;
+    padding:2.5rem;
+    text-align: center;
+    font-size: large;
+}
+
+.linha {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    justify-content: space-evenly;
+}
+
+.voltar {
+    position:absolute;
+    top:1rem;
+    left:1rem;
+    font-size: medium;
+}
+
+
+.agenda{
+    size: small;
+}
+
+.text-block{
+    width: 18rem;
+    height: 22rem;
+    margin:1rem;
+    padding:1rem;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    border: .1rem solid black;
 }
