--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ header {
     height: 4rem;
     border-bottom: .1rem solid black;
     padding:0.5rem;
+    font-family: 'Oswald', sans-serif;
 }
 
 
@@ -122,3 +123,4 @@ h1{
     flex-direction: column;
     border: .1rem solid black;
 }
+
