--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ header {
     height: 4rem;
     border-bottom: .1rem solid black;
     padding:0.5rem;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Libre Bodoni', serif;
 }
 
 
