--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ h1{
     padding:2.5rem;
     text-align: center;
     font-size: large;
+    background-color: rgb(255, 0, 0);
 }
 
 .linha {
@@ -90,6 +91,7 @@ h1{
     justify-content: center;
     justify-content: space-evenly;
     align-items: center;
+    background-color: rgb(255, 255, 255);
 }
 
 .voltar {
