--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ h1{
     display: flex;
     justify-content: center;
     justify-content: space-evenly;
+    text-decoration: solid;
     align-items: center;
     flex-direction: column;
     padding:2rem;
@@ -73,7 +74,7 @@ h1{
 
 
 
-.border{
+.border-vermelho{
     width: 12rem;
     justify-content:space-evenly;
     justify-content:space-between;
@@ -83,6 +84,30 @@ h1{
     text-align: center;
     font-size: large;
     background-color: rgb(255, 0, 0);
+}
+
+.border-azul{
+    width: 12rem;
+    justify-content:space-evenly;
+    justify-content:space-between;
+    border: .1rem solid black;
+    margin:1rem;
+    padding:2.5rem;
+    text-align: center;
+    font-size: large;
+    background-color: rgb(0, 17, 255);
+}
+
+.border-branco{
+    width: 12rem;
+    justify-content:space-evenly;
+    justify-content:space-between;
+    border: .1rem solid black;
+    margin:1rem;
+    padding:2.5rem;
+    text-align: center;
+    font-size: large;
+    background-color: rgb(0, 162, 255);
 }
 
 .linha {
@@ -134,4 +159,12 @@ h1{
     align-items: center;
     justify-content: space-between;
 
+}
+
+a[href] {
+    color: white;
+  }
+
+.black{
+    color:black;
 }
