--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,9 @@ h1{
     padding:2.5rem;
     text-align: center;
     font-size: large;
-    background-color: rgb(255, 0, 0);
+    background-color: #FD4755
+    ;
+    border-radius: 1rem;
 }
 
 .border-azul{
@@ -95,7 +97,8 @@ h1{
     padding:2.5rem;
     text-align: center;
     font-size: large;
-    background-color: rgb(0, 17, 255);
+    background-color: #CEE8FE;
+    border-radius: 1rem;
 }
 
 .border-branco{
@@ -107,7 +110,8 @@ h1{
     padding:2.5rem;
     text-align: center;
     font-size: large;
-    background-color: rgb(0, 162, 255);
+    background-color: #0593FC;
+    border-radius: 1rem;
 }
 
 .linha {
@@ -162,5 +166,5 @@ h1{
 }
 
 a[href] {
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
   }
