--- a/css/style.css
+++ b/css/style.css
@@ -83,8 +83,7 @@ h1{
     padding:2.5rem;
     text-align: center;
     font-size: large;
-    background-color: #FD4755
-    ;
+    background-color: #FD4755;
     border-radius: 1rem;
 }
 
