--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,19 @@ h1{
     border-radius: 1rem;
 }
 
+.border-marinho{
+    width: 12rem;
+    justify-content:space-evenly;
+    justify-content:space-between;
+    border: .1rem solid black;
+    margin:1rem;
+    padding:2.5rem;
+    text-align: center;
+    font-size: large;
+    background-color: #3042c4;
+    border-radius: 1rem;
+}
+
 .linha {
     display: flex;
     flex-direction: row;
@@ -154,7 +167,8 @@ h1{
     flex-direction: column;
     border: .1rem solid black;
     font-family: 'Heebo', sans-serif;
-    background-color: rgb(0, 162, 255);
+    background-color: #0593FC;
+    border-radius: 1rem;
 }
 
 .barbeiro{ 
@@ -166,4 +180,5 @@ h1{
 
 a[href] {
     color: rgb(0, 0, 0);
+    text-decoration: none;
   }
