--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,23 @@ h1{
     font-size: medium;
 }
 
+.adicionar {
+    position:absolute;
+    top:1rem;
+    right:1rem;
+    font-size: medium;
+}
+
+.button {
+    cursor: pointer;
+    outline: none;
+    box-shadow: 0 9px #ffffff;
+  }
+
+.button:active {
+    box-shadow: 0px 5px #ffffff;
+    transform: translateY(6px) translateX(2px);
+  }
 
 .agenda{
     size: small;
